* Upgraded some of the dependencies and added a step in ci.yml to print the current Maven version. Maven 3.6.x doesn't support Java 17 (https://stackoverflow.com/a/69703688/2801909). * Downgraded javax.servlet-api dependency to fix build failure caused by -- Used undeclared dependencies found: jakarta.servlet:jakarta.servlet-api:jar:4.0.4:runtime